<?xml version="1.0"?>
<package format="2">
  <name>jaco_gen3_description</name>
  <version>0.0.0</version>
  <description>The jaco_gen3_description package. A wrapper around kortex_description published by Kinova https://github.com/Kinovarobotics/ros_kortex/tree/master/kortex_description, with customizations to allow for use of gazebo</description>

  <maintainer email="tsr42@cornell.edu">Travers Rhodes</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>kortex_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
